--- a/wp-content/themes/dunkerskulturhus/assets/source/sass/master.scss
+++ b/wp-content/themes/dunkerskulturhus/assets/source/sass/master.scss
@@ -8,3 +8,12 @@ html.video-is-playing {
         display: none !important;
     }
 }
+
+.admin-bar #site-header {
+    @media screen and (max-width: 782px) {
+        margin-top: 46px;
+    }
+    @media screen and (min-width: 783px) {
+        margin-top: 32px;
+    }
+}
